--- a/modules/amq-install/module.yaml
+++ b/modules/amq-install/module.yaml
@@ -2,6 +2,7 @@ schema_version: 1
 
 name: amq.broker75.install
 
+version: 1
 artifacts:
     - path: amq-broker-7.4.0-bin.zip
       description: "https://access.redhat.com/jbossnetwork/restricted/listSoftware.html?product=jboss.amq.broker&downloadType=patches&version=7.4.0"
